# crypto-trading-multiagent-system

./: .codespellrc  .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  langgraph.json  pyproject.toml
.gemini/: GEMINI.md
.github/workflows/: new-pr-check.yml
scripts/: generate_graph.py
src/: config.py
src/agents/: aggregator.py  planner.py
src/events/: market_signal.py
src/models/: analysis.py  trading.py
src/monitoring/: logging_config.py
src/persistence/: db.py  queries.py  trade_history.py
src/prompts/: aggregator_prompts.py  planner_prompts.py  subagent_prompts.py
src/services/: base_wallet.py  evm_wallet.py  market_watcher.py  risk_validator.py  solana_wallet.py  transaction_monitor.py  wallet_manager.py
src/tools/: correlation_provider.py  gas_tracker.py  liquidity_provider.py  news_provider.py  technical_analysis.py  volatility_provider.py  whale_provider.py
src/utils/: llm.py  retry.py
src/workflows/: graph.py  main.py  nodes.py  state.py
tests/: test_analysts.py  test_binance_provider.py  test_coingecko_provider.py  test_correlation_provider.py  test_evm_wallet.py  test_executor.py  test_gas_tracker.py  test_liquidity_provider.py  test_market_watcher.py  test_market_watcher_integration.py  test_news_provider.py  test_persistence.py  test_planner.py  test_risk_validator.py  test_solana_wallet.py  test_technical_analysis.py  test_trade_history.py  test_trade_history_persistence.py  test_transaction_monitor.py  test_wallet_manager.py  test_wallet_manager_integration.py  test_workflow.py  test_workflow_integration.py
(+16 files in other folders)
